Add CSS style for the last mandatory task

--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
 	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
 	<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-	<link rel="stylesheet" type="text/css" href="styles/8-places.css">
+	<link rel="stylesheet" type="text/css" href="styles/100-places.css">
 </head>
 <body>
 	<!-- HEADER -->
@@ -30,12 +30,14 @@
 
 		<section class="filters">
 			<!-- Filter Box -->
+			<!-- ---------- -->
 			<button class="Search">
 				<!-- Search Button -->
 				Search
 			</button>
 
 			<!-- Filter -->
+			<!-- ------ -->
             <div class="locations">
                 <h3>States</h3>
                 <h4>Helsinki, Turku...</h4>
@@ -63,11 +65,13 @@
 		</section>
 
 		<!-- PLACES -->
+		<!-- ------ -->
 		<section class="places">
 			<!-- H1 -->
 			<h1>Places</h1>
 
 			<!-- Sections of places -->
+			<!-- ------------------ -->
 			<!-- First Place -->
 			<article>
 				<h2>My home</h2>
@@ -102,6 +106,9 @@
 						Lorem Ipsum on ollut teollisuuden normaali
 						testausteksti jo 1500-luvulta astiLorem Ipsum.
 					</p>
+				</div>
+				<div class="amenities">
+					<h2><b>Amenities</b></h2>
 				</div>
 			</article>
 
