--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>HBnB</title>
-  </head>
-  <body style="margin: 0; padding: 0">
-      <header style="background: #FF0000; height: 70px; width: 100%;">
-      </header>
-      <footer style="position: fixed; background: #00FF00;
-		     height: 60px; width: 100%; bottom: 0;">
-	<p style="position: absolute; text-align: center; top: 10%;
-		  bottom: 0; right: 0; left: 0;">
-	  Holberton School</p>
-      </footer>
+	<head>
+		<meta charset="utf-8">
+		<title>AirBnB clone</title>
+		<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	</head>
+	<body style="margin: 0px; padding: 0px;">
+	<header style="background-color: #FF0000; height: 70px; width: 100%; margin: 0px;">
+	</header>
+	<footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0px;">
+		<p style="text-align: center">
+			Holberton School
+		</p>
+	</footer>
   </body>
 </html>
