--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
-      body {
-      margin: 0;
-      padding: 0;
-      }
-      header {
-      background: #FF0000;
-      height: 70px;
-      width: 100%;
-      }
-      footer {
-      position: fixed;
-      background: #00FF00;
-      height: 60px;
-      width: 100%;
-      bottom: 0;
-      }
-      footer p {
-      position: absolute;
-      text-align: center;
-      top: 10%;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      }
-    </style>
-    <title>HBnB</title>
-  </head>
-  <body>
-      <header>
-      </header>
-      <footer>
-	<p>Holberton School</p>
-      </footer>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	<style>
+		body
+		{
+			padding: 0px;
+			margin: 0px;
+		}
+		header
+		{
+			background-color: #FF0000;
+			height: 70px;
+			width: 100%;
+			margin: 0px;
+		}
+		footer
+		{
+			background-color: #00FF00;
+			height: 60px;
+			width: 100%;
+			position: absolute;
+			bottom: 0px;
+		}
+		p {text-align: center}
+	</style>
+</head>
+<body>
+	<header>
+	</header>
+	<footer>
+		<p>
+			Holberton School
+		</p>
+	</footer>
+</body>
 </html>
