--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>HBnB</title>
-    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-  </head>
-  <body>
-      <header>
-      </header>
-      <footer>
-	<p>Holberton School</p>
-      </footer>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	<link rel="stylesheet" type="text/css" href="styles/2-common.css">
+	<link rel="stylesheet" type="text/css" href="styles/2-footer.css">
+	<link rel="stylesheet" type="text/css" href="styles/2-header.css">
+</head>
+<body>
+	<header class="Principal_header">
+		<div class="Logo">
+		</div>
+	</header>
+
+	<footer class="Principal_footer">
+		<p class="name">
+			Holberton School
+		</p>
+	</footer>
+</body>
 </html>
