--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/4-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo"></div>
-    </header>
-    <div class="container">
-      <section class="filters">
-	<button type="button">Search</button>
-      </section>
-    </div>
-    <footer>
-      <p>Holberton School</p>
-    </footer>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	<link rel="stylesheet" type="text/css" href="styles/4-common.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
+	<link rel="stylesheet" type="text/css" href="styles/4-filters.css">
+</head>
+<body>
+	<header class="Principal_header">
+		<div class="Logo">
+		</div>
+	</header>
+
+	<div class="container">
+		<section class="filters">
+			<button class="Search">
+				Search
+			</button>
+		</section>
+	</div>
+
+	<footer class="Principal_footer">
+		<p class="name">
+			Holberton School
+		</p>
+	</footer>
+</body>
 </html>
