--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/5-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo"></div>
-    </header>
-    <div class="container">
-      <section class="filters">
-	<button type="button">Search</button>
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona...</h4>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	<link rel="stylesheet" type="text/css" href="styles/4-common.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
+	<link rel="stylesheet" type="text/css" href="styles/5-filters.css">
+</head>
+<body>
+	<header class="Principal_header">
+		<div class="Logo">
+		</div>
+	</header>
+
+	<div class="container">
+		<section class="filters">
+			<button class="Search">
+				Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>Helsinki, Turku...</h4>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, kitchen...</h4>
+            </div>
+		</section>
 	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Internet, Kitchen...</h4>
-	</div>
-      </section>
-    </div>
-    <footer>
-      <p>Holberton School</p>
-    </footer>
-  </body>
+
+	<footer class="Principal_footer">
+		<p class="name">
+			Holberton School
+		</p>
+	</footer>
+</body>
 </html>
