--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-    <link rel="icon" href="images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
-    <header>
-      <div class="logo"></div>
-    </header>
-    <div class="container">
-      <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, Arizona</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>
-		<h2>Arizona:</h2>
-		<ul>
-		  <li>Pheonix</li>
-		  <li>Sedona</li>
-		</ul>
-	      </li>
-	      <li>
-		<h2>California:</h2>
-		<ul>
-		  <li>LA</li>
-		  <li>SF</li>
-		</ul>
-	      </li>
-	    </ul>
-	  </div>
+<head>
+	<meta charset="utf-8">
+	<title>AirBnB clone</title>
+	<link rel="icon" type="image/png" href="images/icon.png" sizes="32x32">
+	<link rel="stylesheet" type="text/css" href="styles/4-common.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
+	<link rel="stylesheet" type="text/css" href="styles/3-header.css">
+	<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
+</head>
+<body>
+	<header class="Principal_header">
+		<div class="Logo">
+		</div>
+	</header>
+
+	<div class="container">
+		<section class="filters">
+			<button class="Search">
+				Search
+            </button>
+            <div class="locations">
+                <h3>States</h3>
+                <h4>Helsinki, Turku...</h4>
+                <ul class="popover_1">
+                    <li><h2>Helsinki:</h2>
+                        <ul><li>Vantaa</li></ul>
+                        <ul><li>Espoo</li></ul>
+                    </li>
+                    <li><h2>Turku:</h2>
+                        <ul><li>Koroinen</li></ul>
+                        <ul><li>Naantali</li></ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internet, kitchen...</h4>
+                <ul class="popover_2">
+                    <li>TV</li>
+                    <li>Internet</li>
+                    <li>Kitchen</li>
+                    <li>Park</li>
+                </ul>
+            </div>
+		</section>
 	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Internet, Kitchen</h4>
-	  <div class="popover">
-	    <ul>
-	      <li>Internet</li>
-	      <li>TV</li>
-	      <li>Kitchen</li>
-	      <li>Iron</li>
-	    </ul>
-	  </div>
-	</div>
-	<button type="button">Search</button>
-      </section>
-    </div>
-    <footer>
-      <p>Holberton School</p>
-    </footer>
-  </body>
+
+	<footer class="Principal_footer">
+		<p class="name">
+			Holberton School
+		</p>
+	</footer>
+</body>
 </html>
